correct spacing on nav

--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -20,7 +20,7 @@ header {
 
 h1 {
     color: black;
-    text-shadow: 2px 2px #edae49, 4px 4px #6f736f;
+    text-shadow: 1px 1px #edae49, 2px 2px #6f736f;
     font-size: 4vh;
     font-weight: 300;
     margin: 0px;
